visual/build/MinispecPythonParser.py
# Generated from /home/andrewj31415/minispec/visual/MinispecPython.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class MinispecPythonParser ( Parser ):

    grammarFileName = "MinispecPython.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "','", "')'", "'#'", "'type'", 
                     "'import'", "';'", "'bsvimport'", "'typedef'", "'enum'", 
                     "'{'", "'}'", "'='", "'struct'", "'let'", "'module'", 
                     "'endmodule'", "'input'", "'default'", "'method'", 
                     "'endmethod'", "'rule'", "'endrule'", "'function'", 
                     "'endfunction'", "'.'", "'['", "']'", "':'", "'?'", 
                     "'case'", "'endcase'", "'**'", "'*'", "'/'", "'%'", 
                     "'+'", "'-'", "'<<'", "'>>'", "'<'", "'<='", "'>'", 
                     "'>='", "'=='", "'!='", "'&'", "'^'", "'^~'", "'~^'", 
                     "'|'", "'&&'", "'||'", "'!'", "'~'", "'~&'", "'~|'", 
                     "'return'", "'begin'", "'end'", "'if'", "'else'", "'for'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "UpperCaseIdentifier", "LowerCaseIdentifier", "DollarIdentifier", 
                      "IntLiteral", "StringLiteral", "WhiteSpace", "OneLineComment", 
                      "InlineComment" ]

    RULE_lowerCaseIdentifier = 0
    RULE_upperCaseIdentifier = 1
    RULE_identifier = 2
    RULE_anyIdentifier = 3
    RULE_arg = 4
    RULE_args = 5
    RULE_argFormal = 6
    RULE_argFormals = 7
    RULE_param = 8
    RULE_params = 9
    RULE_paramFormal = 10
    RULE_paramFormals = 11
    RULE_typeName = 12
    RULE_packageDef = 13
    RULE_packageStmt = 14
    RULE_importDecl = 15
    RULE_bsvImportDecl = 16
    RULE_typeDecl = 17
    RULE_typeDefSynonym = 18
    RULE_typeId = 19
    RULE_typeDefEnum = 20
    RULE_typeDefEnumElement = 21
    RULE_typeDefStruct = 22
    RULE_structMember = 23
    RULE_varDecl = 24
    RULE_varInit = 25
    RULE_moduleDef = 26
    RULE_moduleId = 27
    RULE_moduleStmt = 28
    RULE_submoduleDecl = 29
    RULE_inputDef = 30
    RULE_methodDef = 31
    RULE_ruleDef = 32
    RULE_functionDef = 33
    RULE_functionId = 34
    RULE_varAssign = 35
    RULE_lvalue = 36
    RULE_expression = 37
    RULE_caseExprItem = 38
    RULE_binopExpr = 39
    RULE_unopExpr = 40
    RULE_exprPrimary = 41
    RULE_memberBinds = 42
    RULE_memberBind = 43
    RULE_beginEndBlock = 44
    RULE_regWrite = 45
    RULE_stmt = 46
    RULE_ifStmt = 47
    RULE_caseStmt = 48
    RULE_caseStmtItem = 49
    RULE_caseStmtDefaultItem = 50
    RULE_forStmt = 51

    ruleNames =  [ "lowerCaseIdentifier", "upperCaseIdentifier", "identifier", 
                   "anyIdentifier", "arg", "args", "argFormal", "argFormals", 
                   "param", "params", "paramFormal", "paramFormals", "typeName", 
                   "packageDef", "packageStmt", "importDecl", "bsvImportDecl", 
                   "typeDecl", "typeDefSynonym", "typeId", "typeDefEnum", 
                   "typeDefEnumElement", "typeDefStruct", "structMember", 
                   "varDecl", "varInit", "moduleDef", "moduleId", "moduleStmt", 
                   "submoduleDecl", "inputDef", "methodDef", "ruleDef", 
                   "functionDef", "functionId", "varAssign", "lvalue", "expression", 
                   "caseExprItem", "binopExpr", "unopExpr", "exprPrimary", 
                   "memberBinds", "memberBind", "beginEndBlock", "regWrite", 
                   "stmt", "ifStmt", "caseStmt", "caseStmtItem", "caseStmtDefaultItem", 
                   "forStmt" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    UpperCaseIdentifier=64
    LowerCaseIdentifier=65
    DollarIdentifier=66
    IntLiteral=67
    StringLiteral=68
    WhiteSpace=69
    OneLineComment=70
    InlineComment=71

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class LowerCaseIdentifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LowerCaseIdentifier(self):
            return self.getToken(MinispecPythonParser.LowerCaseIdentifier, 0)

        def getRuleIndex(self):
            return MinispecPythonParser.RULE_lowerCaseIdentifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLowerCaseIdentifier" ):
                listener.enterLowerCaseIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLowerCaseIdentifier" ):
                listener.exitLowerCaseIdentifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLowerCaseIdentifier" ):
                return visitor.visitLowerCaseIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def lowerCaseIdentifier(self):

        localctx = MinispecPythonParser.LowerCaseIdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_lowerCaseIdentifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(MinispecPythonParser.LowerCaseIdentifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UpperCaseIdentifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UpperCaseIdentifier(self):
            return self.getToken(MinispecPythonParser.UpperCaseIdentifier, 0)

        def getRuleIndex(self):
            return MinispecPythonParser.RULE_upperCaseIdentifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUpperCaseIdentifier" ):
                listener.enterUpperCaseIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUpperCaseIdentifier" ):
                listener.exitUpperCaseIdentifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUpperCaseIdentifier" ):
                return visitor.visitUpperCaseIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def upperCaseIdentifier(self):

        localctx = MinispecPythonParser.UpperCaseIdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_upperCaseIdentifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(MinispecPythonParser.UpperCaseIdentifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lowerCaseIdentifier(self):
            return self.getTypedRuleContext(MinispecPythonParser.LowerCaseIdentifierContext,0)


        def upperCaseIdentifier(self):
            return self.getTypedRuleContext(MinispecPythonParser.UpperCaseIdentifierContext,0)


        def getRuleIndex(self):
            return MinispecPythonParser.RULE_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def identifier(self):

        localctx = MinispecPythonParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_identifier)
        try:
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MinispecPythonParser.LowerCaseIdentifier]:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.lowerCaseIdentifier()
                pass
            elif token in [MinispecPythonParser.UpperCaseIdentifier]:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.upperCaseIdentifier()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AnyIdentifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lowerCaseIdentifier(self):
            return self.getTypedRuleContext(MinispecPythonParser.LowerCaseIdentifierContext,0)


        def upperCaseIdentifier(self):
            return self.getTypedRuleContext(MinispecPythonParser.UpperCaseIdentifierContext,0)


        def DollarIdentifier(self):
            return self.getToken(MinispecPythonParser.DollarIdentifier, 0)

        def getRuleIndex(self):
            return MinispecPythonParser.RULE_anyIdentifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnyIdentifier" ):
                listener.enterAnyIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnyIdentifier" ):
                listener.exitAnyIdentifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnyIdentifier" ):
                return visitor.visitAnyIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def anyIdentifier(self):

        localctx = MinispecPythonParser.AnyIdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_anyIdentifier)
        try:
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MinispecPythonParser.LowerCaseIdentifier]:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.lowerCaseIdentifier()
                pass
            elif token in [MinispecPythonParser.UpperCaseIdentifier]:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.upperCaseIdentifier()
                pass
            elif token in [MinispecPythonParser.DollarIdentifier]:
                self.enterOuterAlt(localctx, 3)
                self.state = 114
                self.match(MinispecPythonParser.DollarIdentifier)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(MinispecPythonParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MinispecPythonParser.RULE_arg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArg" ):
                listener.enterArg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArg" ):
                listener.exitArg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArg" ):
                return visitor.visitArg(self)
            else:
                return visitor.visitChildren(self)




    def arg(self):

        localctx = MinispecPythonParser.ArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_arg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinispecPythonParser.ArgContext)
            else:
                return self.getTypedRuleContext(MinispecPythonParser.ArgContext,i)


        def getRuleIndex(self):
            return MinispecPythonParser.RULE_args

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgs" ):
                listener.enterArgs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgs" ):
                listener.exitArgs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgs" ):
                return visitor.visitArgs(self)
            else:
                return visitor.visitChildren(self)




    def args(self):

        localctx = MinispecPythonParser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_args)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(MinispecPythonParser.T__0)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MinispecPythonParser.T__0) | (1 << MinispecPythonParser.T__10) | (1 << MinispecPythonParser.T__29) | (1 << MinispecPythonParser.T__30) | (1 << MinispecPythonParser.T__36) | (1 << MinispecPythonParser.T__37) | (1 << MinispecPythonParser.T__46) | (1 << MinispecPythonParser.T__47) | (1 << MinispecPythonParser.T__48) | (1 << MinispecPythonParser.T__49) | (1 << MinispecPythonParser.T__50) | (1 << MinispecPythonParser.T__53) | (1 << MinispecPythonParser.T__54) | (1 << MinispecPythonParser.T__55) | (1 << MinispecPythonParser.T__56) | (1 << MinispecPythonParser.T__57))) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & ((1 << (MinispecPythonParser.UpperCaseIdentifier - 64)) | (1 << (MinispecPythonParser.LowerCaseIdentifier - 64)) | (1 << (MinispecPythonParser.DollarIdentifier - 64)) | (1 << (MinispecPythonParser.IntLiteral - 64)) | (1 << (MinispecPythonParser.StringLiteral - 64)))) != 0):
                self.state = 120
                self.arg()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MinispecPythonParser.T__1:
                    self.state = 121
                    self.match(MinispecPythonParser.T__1)
                    self.state = 122
                    self.arg()
                    self.state = 127
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 130
            self.match(MinispecPythonParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgFormalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.argName = None # LowerCaseIdentifierContext

        def typeName(self):
            return self.getTypedRuleContext(MinispecPythonParser.TypeNameContext,0)


        def lowerCaseIdentifier(self):
            return self.getTypedRuleContext(MinispecPythonParser.LowerCaseIdentifierContext,0)


        def getRuleIndex(self):
            return MinispecPythonParser.RULE_argFormal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgFormal" ):
                listener.enterArgFormal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgFormal" ):
                listener.exitArgFormal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgFormal" ):
                return visitor.visitArgFormal(self)
            else:
                return visitor.visitChildren(self)




    def argFormal(self):

        localctx = MinispecPythonParser.ArgFormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_argFormal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.typeName()
            self.state = 133
            localctx.argName = self.lowerCaseIdentifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgFormalsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argFormal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinispecPythonParser.ArgFormalContext)
            else:
                return self.getTypedRuleContext(MinispecPythonParser.ArgFormalContext,i)


        def getRuleIndex(self):
            return MinispecPythonParser.RULE_argFormals

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgFormals" ):
                listener.enterArgFormals(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgFormals" ):
                listener.exitArgFormals(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgFormals" ):
                return visitor.visitArgFormals(self)
            else:
                return visitor.visitChildren(self)




    def argFormals(self):

        localctx = MinispecPythonParser.ArgFormalsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_argFormals)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(MinispecPythonParser.T__0)
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MinispecPythonParser.UpperCaseIdentifier:
                self.state = 136
                self.argFormal()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MinispecPythonParser.T__1:
                    self.state = 137
                    self.match(MinispecPythonParser.T__1)
                    self.state = 138
                    self.argFormal()
                    self.state = 143
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 146
            self.match(MinispecPythonParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.intParam = None # ExpressionContext

        def typeName(self):
            return self.getTypedRuleContext(MinispecPythonParser.TypeNameContext,0)


        def expression(self):
            return self.getTypedRuleContext(MinispecPythonParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MinispecPythonParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = MinispecPythonParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_param)
        try:
            self.state = 150
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.typeName()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 149
                localctx.intParam = self.expression(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinispecPythonParser.ParamContext)
            else:
                return self.getTypedRuleContext(MinispecPythonParser.ParamContext,i)


        def getRuleIndex(self):
            return MinispecPythonParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):
